[package]
name = "xmrig-http-api-monitor"
version = "2.0.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
iced = { version = "0.14", features = ["wgpu", "tokio"] }
md5 = "0.7"

[profile.release]
lto = true
codegen-units = 1
strip = true
